[package]
name = "duprm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.0"
md5 = "0.7.0"
threadpool = "1.8.1"
termcolor = "1.1.2"
futures = "0.3.19"
clap = "2.34.0"
futures-polling = "0.1.1"
num-integer = "0.1.44"

[dependencies.async-std]
version = "1.7.0"
features = ["attributes"]
